# simpulse

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  Makefile.docker  Makefile.local  README  README.md  configure  constant_acceleration_phase_model.cpp  constant_pdot_phase_model.cpp  generate_pulse.py  heavy_handed_uninstall.py  legacy_uninstall.py  requirements.txt  simpulse.hpp  simpulse_app.py  simpulse_internals.hpp  single_pulse.cpp  sinusoidal_phase_model.cpp  test_pulse_upsampling.py  von_mises_profile.cpp
ch_frb_l1/: rpc_client.py
cmake/: FindFFTW3.cmake  FindPYBIND11_WRAPPER.cmake  symlink.py  uninstall.py
cpp/: 01-simulating-frb.py  CMakeLists.txt  constant_acceleration_phase_model.cpp  keplerian_binary_phase_model.cpp  phase_model_base.cpp  single_pulse.cpp  von_mises_profile.cpp
cython/: simpulse.pyx  simpulse_cython.hpp  simpulse_pxd.pxd
examples/python/: 01-simulating-frb.py  02-simulating-pulsar.py  03-python-phase-model.py  99-plot-pulses.py
include/: CMakeLists.txt  simpulse.hpp
include/simpulse/: inlines.hpp  internals.hpp  pulsar_phase_models.hpp  pulsar_profiles.hpp  pulsars.hpp  single_pulse.hpp
pybind11/: CMakeLists.txt  simpulse_pybind11.cpp  simpulse_pybind11.hpp  simpulse_pybind11_array_helpers.cpp  simpulse_pybind11_array_helpers.hpp  wrap_phase_models.cpp  wrap_single_pulse.cpp  wrap_von_mises_profile.cpp
python/: CMakeLists.txt
python/simpulse/: CMakeLists.txt  __init__.py  utils.py
site/: Makefile.local.cedar  Makefile.local.chimer  Makefile.local.chimpanzee  Makefile.local.earlgrey  Makefile.local.frb-analysis  Makefile.local.frb-compute-0  Makefile.local.frb1  Makefile.local.kms_laptop  Makefile.local.kms_laptop16  Makefile.local.kms_laptop19  Makefile.local.orangutan  Makefile.local.scinet  Makefile.local.travis  README.md
tests/: CMakeLists.txt  test-pulsars.py  test-pulse.py
visual_check/: plot-pulses.py
